--- a/index.html
+++ b/index.html
@@ -12,165 +12,219 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- modern-normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
-      <nav>
-        <a class="logo" href=""> Web<span class="logo-black">Studio</span></a>
-        <ul class="list">
-          <li><a class="link-header link-active" href="">Студия</a></li>
-          <li><a class="link-header" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link-header" href="">Контакты</a></li>
+    <header class="header">
+      <div class="container">
+        <nav class="navigation">
+          <a
+            class="logo"
+            href="./index.html"
+            lang="en"
+            aria-label="Логотип сайта WebStudio"
+            >Web<span class="logo-black">Studio</span>
+          </a>
+          <ul class="site-nav list">
+            <li class="item">
+              <a class="link-header link-active" href="">Студия</a>
+            </li>
+            <li class="item">
+              <a class="link-header" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="item"><a class="link-header" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="auth-nav list">
+          <li class="auth-nav-item">
+            <a class="link-contact link-active" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="auth-nav-item">
+            <a class="link-contact" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-
-      <a class="link-contact link-active" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="link-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
 
     <main>
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-button" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- Преимущества -->
-      <section>
-        <!-- выводить этот заголовок не будем, сделал как в примере -->
-        <h2 class="visually-hidden">Особенности</h2>
-        <ul class="list advantages">
-          <li>
-            <h3 class="advantages-header">Внимание к деталям</h3>
-            <p class="advantages-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-header">Пунктуальность</h3>
-            <p class="advantages-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-header">Планирование</h3>
-            <p class="advantages-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-header">Современные технологии</h3>
-            <p class="advantages-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="features section">
+        <div class="container">
+          <!-- выводить этот заголовок не будем, сделал как в примере -->
+          <h2 class="visually-hidden">Особенности</h2>
+          <ul class="list advantages">
+            <li class="features-item">
+              <h3 class="advantages-header">Внимание к деталям</h3>
+              <p class="advantages-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="advantages-header">Пунктуальность</h3>
+              <p class="advantages-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="advantages-header">Планирование</h3>
+              <p class="advantages-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="advantages-header">Современные технологии</h3>
+              <p class="advantages-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section>
-        <h2 class="activity">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="планшет с клавиатурой"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="ноутбук"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="графический планшет"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="activity">
+        <div class="container">
+          <h2 class="activity-title">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li class="activity-item">
+              <img
+                src="./images/img1.jpg"
+                alt="планшет с клавиатурой"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="activity-item">
+              <img
+                src="./images/img2.jpg"
+                alt="ноутбук"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="activity-item">
+              <img
+                src="./images/img3.jpg"
+                alt="графический планшет"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда -->
-      <section class="team">
-        <h2 class="team-header">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/team/product_designer.jpg"
-              alt="дизайнер продукта"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member">Игорь Демьяненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/frontend_developer.jpg"
-              alt="разработчик"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/marketingnew.jpg"
-              alt="маркетинг"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member">Николай Тарасов</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/ui_designer.jpg"
-              alt="дизайнер"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="team-header">Наша команда</h2>
+          <ul class="list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team/product_designer.jpg"
+                alt="дизайнер продукта"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member">Игорь Демьяненко</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team/frontend_developer.jpg"
+                alt="разработчик"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member">Ольга Репина</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team/marketingnew.jpg"
+                alt="маркетинг"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member">Николай Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team/ui_designer.jpg"
+                alt="дизайнер"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member">Михаил Ермаков</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Футер -->
     <footer class="footer">
-      <a class="logo" href=""> Web<span class="logo-white">Studio</span></a>
-      <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="list">
-        <li>
-          <a class="footer-contact" href="mailto:info@example.com"
-            >info@example.com</a
-          >
-        </li>
-        <li>
-          <a class="footer-contact" href="tel:+380991111111"
-            >+38 099 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <a
+          class="logo"
+          href="/index.html"
+          lang="en"
+          aria-label="Логотип сайта WebStudio"
+          >Web<span class="logo-white">Studio</span></a
+        >
+        <address class="address-footer">
+          <ul class="list">
+            <li class="footer-item">
+              <a
+                class="footer-address"
+                href="https://goo.gl/maps/qPdaPdiiLv6fJNoK8"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-contact" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
