--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member">Игорь Демьяненко</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-items">
+                <h3 class="team-member">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -161,8 +163,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member">Ольга Репина</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-items">
+                <h3 class="team-member">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -172,8 +176,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member">Николай Тарасов</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-items">
+                <h3 class="team-member">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -183,8 +189,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member">Михаил Ермаков</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-items">
+                <h3 class="team-member">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
